# wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  config.py  import_gkgn.py  pyproject.toml  requirements.pip  requirements.txt  setup.cfg
apps/: __init__.py  cache.py  db.py  engine.py  models.py  routes.py  views.py
apps/coord/: __init__.py  constants.py  routes.py  serializers.py  track_file.py  views.py
apps/gkgn/: __init__.py  constants.py  models.py  routes.py  views.py
apps/static/: js.js
apps/template_params/: models.py  serializers.py  views.py
apps/templates/: base.html  coord.html  crontab.html  index.html  source.html  status.html
apps/templates/coord/: index.html
apps/templates/gkgn/: index.html  regions.html  result.html
apps/templates/template_params/: index.html
migrations/: env.py
migrations/versions/: 03667a1c8139_.py  7df6e2728025_.py  800980f971c4_add_coord.py  88401a56eeb4_gkgn_init.py  bd1848dcb9b1_.py  eff55356b59f_add_template_params.py  fa2056fa7d17_.py
scripts/: base_update.py  fix_wikispaces.py  import_gkgn.py  kob.py  kpm.py  kraz.py  kul.py  read_dump.py
templates/: base.html  crontab.txt  index.html
