[tool.poetry]
name = "dimabot"
version = "0.1.0"
description = ""
authors = ["dima_st_bk <dimastbk@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^3.0.3"
sqlalchemy = {extras = ["pymysql"], version = "^2.0.4"}
Flask-Migrate = "^4.0.4"
alembic = "^1.7.5"
flask-pydantic = "^0.11.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
redis = "^4.1.3"

gpxpy = "^1.5.0"
simplekml = "^1.3.6"
python-slugify = "^5.0.2"
geojson = "^2.5.0"

wikitextparser = "^0.48.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
]
